--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,10 @@ jobs:
           go-version: '1.25'
       - name: Install dependencies
         run: go mod tidy
+      - name: Set version
+        run: echo "version=${GITHUB_REF#refs/*/}" >> "$GITHUB_ENV"
       - name: Build macOS binary
-        run: GOOS=darwin GOARCH=amd64 go build -ldflags "-X main.version=${GITHUB_REF#refs/tags/}" -o unitrack
+        run: GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w -extldflags "-static" -X main.version=${{ env.version }} -o unitrack
       - name: Upload release asset
         uses: softprops/action-gh-release@v1
         with:
